.repos/effect-tsgo/testdata/baselines/reference/effect-v4/nodeBuiltinImport_preview.errors.txt
=== Metadata ===
Effect version: unknown

/.src/nodeBuiltinImport_preview.ts(3,16): error TS2591: Cannot find name 'node:fs'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.


==== /.src/nodeBuiltinImport_preview.ts (1 errors) ====
    // @effect-diagnostics *:off
    // @effect-diagnostics nodeBuiltinImport:warning
    import fs from "node:fs"
                   ~~~~~~~~~
!!! error TS2591: Cannot find name 'node:fs'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
    
    export const preview = fs.readFileSync
    
